--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ p a:hover {
 }
 
 #page {
-	background: url(../images/bg-header.gif) repeat-x top center;
+	background: url(bg-header.gif) repeat-x top center;
 	width: 100%;
 }
 
@@ -47,7 +47,7 @@ p a:hover {
 }
 
 #header ul {
-	background: url(../images/bg-navigation.gif) no-repeat top center;
+	background: url(bg-navigation.gif) no-repeat top center;
 	float: left;
 	height: 50px;
 	list-style: none;
@@ -80,19 +80,19 @@ p a:hover {
 }
 
 #header ul li a:hover, #header ul li.selected a {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -370px;
+	background: url(sprites-icons.gif) no-repeat 0 -370px;
 	color: #7c0032;
 	text-shadow: 1px 1px 0 #fde8f7;
 }
 
 #header ul li.first a:hover, #header ul li.current a {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -250px;
+	background: url(sprites-icons.gif) no-repeat 0 -250px;
 	color: #7c0032;
 	text-shadow: 1px 1px 0 #fde8f7;	
 }
 
 #header ul li.last a:hover, #header ul li.select a  {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -310px;
+	background: url(sprites-icons.gif) no-repeat 0 -310px;
 	color: #7c0032;
 	text-shadow: 1px 1px 0 #fde8f7;	
 }
@@ -104,7 +104,7 @@ p a:hover {
 }
 
 #content span.background {
-	background: url(../images/beautiful-girl.jpg) no-repeat top center;
+	background: url(beautiful-girl.jpg) no-repeat top center;
 	display: block;
 	height: 524px;
 }
@@ -211,7 +211,7 @@ p a:hover {
 }
 
 #content div div.aside ul li {
-	background: url(../images/separator.gif) no-repeat center top;
+	background: url(separator.gif) no-repeat center top;
 	display: block;
 	padding: 20px 0 10px;
 }
@@ -317,19 +317,19 @@ p a:hover {
 }
 
 #content div div ol li span#primary {
-	background: url(../images/sprites-icons.gif) no-repeat 0 0;
+	background: url(sprites-icons.gif) no-repeat 0 0;
 }
 
 #content div div ol li span#secondary {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -70px;
+	background: url(sprites-icons.gif) no-repeat 0 -70px;
 }
 
 #content div div ol li span#tertiary {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -139px;
+	background: url(sprites-icons.gif) no-repeat 0 -139px;
 }
 
 #content div div div {
-	background: url(../images/border-dashed.gif) repeat-x top center;
+	background: url(border-dashed.gif) repeat-x top center;
 	float: none;
     margin-top: 10px;
     overflow: hidden;
@@ -442,19 +442,19 @@ p a:hover {
 }
 
 #content div div.aside div ol li a.facebook {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -430px;
+	background: url(sprites-icons.gif) no-repeat 0 -430px;
 }
 
 #content div div.aside div ol li a.subscribe {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -690px;
+	background: url(sprites-icons.gif) no-repeat 0 -690px;
 }	
 
 #content div div.aside div ol li a.twitter {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -860px;
+	background: url(sprites-icons.gif) no-repeat 0 -860px;
 }
 
 #content div div.aside div ol li a.flicker {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -560px;
+	background: url(sprites-icons.gif) no-repeat 0 -560px;
 }
 
 #content div div.aside div b {
@@ -484,7 +484,7 @@ p a:hover {
 }	
 
 #content div div.aside div b span {
-	background: url(../images/sprites-icons.gif) no-repeat 60px -1165px;
+	background: url(sprites-icons.gif) no-repeat 60px -1165px;
 	display: block;
 	height: 94px;
 	margin-top: 15px;
@@ -521,7 +521,7 @@ p a:hover {
 }
 
 #content div div form input.submit {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -820px;
+	background: url(sprites-icons.gif) no-repeat 0 -820px;
 	border: 0;
 	float: right;
     height: 30px;
@@ -530,13 +530,13 @@ p a:hover {
 }
 
 #footer {
-	background: #f2e1e9 url(../images/bg-footer2.gif) repeat-x top center;
+	background: #f2e1e9 url(bg-footer2.gif) repeat-x top center;
 	height: auto;
 	width: 100%;
 }
 
 #footer div {
-	background:  url(../images/bg-footer.jpg) no-repeat top center;
+	background:  url(bg-footer.jpg) no-repeat top center;
 }
 
 #footer div div {
@@ -613,13 +613,13 @@ p a:hover {
 }
 
 #content div#blog div ul li {
-	background: url(../images/border-dashed.gif) repeat-x center 25px;
+	background: url(border-dashed.gif) repeat-x center 25px;
 	padding-top: 10px;
 	position: relative;
 }
 
 #content div#blog div ul li span#date {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -209px;
+	background: url(sprites-icons.gif) no-repeat 0 -209px;
 	color: #F8FFFB;
     display: inline-block;
     font-weight: bold;
@@ -649,15 +649,15 @@ p a:hover {
 }
 
 #content div#blog div ul li span.connect a.twitter {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -1330px;
+	background: url(sprites-icons.gif) no-repeat 0 -1330px;
 }
  
 #content div#blog div ul li span.connect a.heart {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -1083px;
+	background: url(sprites-icons.gif) no-repeat 0 -1083px;
 }
 
 #content div#blog div ul li span.connect a.facebook {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -1022px;
+	background: url(sprites-icons.gif) no-repeat 0 -1022px;
 }
 
 #content div#blog div ul li h1 {
@@ -735,25 +735,25 @@ p a:hover {
 }
 
 #footer div div div div ul li a.facebook {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -990px;
+	background: url(sprites-icons.gif) no-repeat 0 -990px;
 }
 
 #footer div div div div ul li a.support {
-	background: url(../images/sprites-icons.gif) no-repeat 43px -1266px;
+	background: url(sprites-icons.gif) no-repeat 43px -1266px;
 	padding-left: 40px;
 }
 
 #footer div div div div ul li a.twitter {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -1300px;
+	background: url(sprites-icons.gif) no-repeat 0 -1300px;
 }
 
 #footer div div div div ul li a.flicker {
-	background: url(../images/sprites-icons.gif) no-repeat 43px -1052px;
+	background: url(sprites-icons.gif) no-repeat 43px -1052px;
 	padding-left: 40px;
 }
 
 #footer div div div div span {
-	background: url(../images/sprites-icons.gif) no-repeat 0 -1114px;
+	background: url(sprites-icons.gif) no-repeat 0 -1114px;
 	display: block;
 	color: #584549;
 	font-family: Georgia;
@@ -765,7 +765,7 @@ p a:hover {
 }
 
 #footer div p.footnote {
-	background: url(../images/bg-copyright.gif) no-repeat top center;
+	background: url(bg-copyright.gif) no-repeat top center;
 	color: #c48aa0;
 	display: block;
 	height: 60px;
